--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Front application for Jimmy project",
   "main": "src/server.js",
   "scripts": {
+    "build": "webpack --env prod",
+    "start": "webpack-dev-server --env dev"
   },
   "repository": {
     "type": "git",
@@ -14,5 +16,25 @@
   "bugs": {
     "url": "https://github.com/alecharp/jimmy-front/issues"
   },
-  "homepage": "https://github.com/alecharp/jimmy-front#readme"
+  "homepage": "https://github.com/alecharp/jimmy-front#readme",
+  "dependencies": {
+    "vue": "^2.5.16"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "vue-loader": "^15.2.2",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
+  }
 }
