--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/alecharp/jimmy-front#readme",
   "dependencies": {
-    "keycloak-js": "^4.1.0",
-    "vue": "^2.5.16",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "i": "^0.3.6",
+    "keycloak-js": "^4.5.0",
+    "lodash": "^4.17.11",
+    "npm": "^6.4.1",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -40,7 +46,7 @@
     "path": "^0.12.7",
     "sass-loader": "^7.0.3",
     "vue-loader": "^15.2.2",
-    "vue-template-compiler": "^2.5.16",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
