--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/server.js",
   "scripts": {
     "build": "webpack --env prod",
-    "start": "webpack-dev-server --env dev --hot"
+    "start": "webpack-dev-server --env dev --hot",
+    "test": "karma start karma.config.js --single-run",
+    "test:watch": "karma start karma.config.js --auto-watch --reporters spec --browsers Chrome"
   },
   "repository": {
     "type": "git",
@@ -35,11 +37,20 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "inject-loader": "^4.0.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.5",
+    "mocha": "^5.2.0",
     "node-sass": "^4.9.2",
     "path": "^0.12.7",
     "sass-loader": "^7.0.3",
