--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jimmy-front",
   "version": "1.0.0",
   "description": "Front application for Jimmy project",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "webpack --env prod",
     "start": "webpack-dev-server --env dev --hot",
