--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front application for Jimmy project",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --env prod",
+    "build": "webpack --env production",
     "start": "webpack-dev-server --env dev --hot",
     "test": "karma start karma.config.js --single-run",
     "test:watch": "karma start karma.config.js --auto-watch --reporters spec --browsers Chrome"
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/alecharp/jimmy-front#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.6",
-    "@fortawesome/free-solid-svg-icons": "^5.4.1",
-    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "keycloak-js": "^4.5.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -41,24 +41,24 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.4",
     "path": "^0.12.7",
-    "sass-loader": "^7.0.3",
-    "vue-loader": "^15.2.2",
+    "sass-loader": "^7.1.0",
+    "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   }
 }
