Import project initial state

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ dist/
 *.ipr
 .idea/
 
+### local env files
+.env.local
+.env.*.local
+
+### Log files
+npm-debug.log*
+
+### Firebase
+.firebaserc
+.firebase/
+firebase.json
+
