Create login process

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "core-js": "^2.6.5",
+    "firebase": "^5.9.3",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.5",
@@ -42,10 +44,12 @@
       "@vue/airbnb"
     ],
     "rules": {
-      "import/extensions": [{
-        "vue": "never",
-        "js": "never"
-      }]
+      "import/extensions": [
+        {
+          "vue": "never",
+          "js": "never"
+        }
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
